# sharpsenLang

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt  main.cpp  simple.stk  test.stk
Source/Api/: Api.cpp  CMakeLists.txt
Source/Api/h/: Api.hpp
Source/Interpreter/: CMakeLists.txt  Interpreter.cpp
Source/Interpreter/Analyzer/: Analyzer.cpp  CMakeLists.txt
Source/Interpreter/Analyzer/h/: Analyzer.hpp  AnalyzerState.hpp  BinaryInstructions.hpp  InstructionB.hpp  InstructionStatements.hpp  SyntaxError.hpp
Source/Interpreter/Compiler/: CMakeLists.txt  Compiler.cpp
Source/Interpreter/Compiler/h/: Compiler.hpp  CompilerState.hpp
Source/Interpreter/Runtime/: CMakeLists.txt  Runtime.cpp
Source/Interpreter/Runtime/h/: Runtime.hpp
Source/Interpreter/ScriptFile/: CMakeLists.txt  ScriptFile.cpp
Source/Interpreter/ScriptFile/h/: ScriptFile.hpp
Source/Interpreter/h/: IInterpreter.hpp  Instruction.hpp  Interpreter.hpp
Source/Types/: CMakeLists.txt  Number.cpp  Object.cpp  String.cpp
Source/Types/h/: Number.hpp  Object.hpp  String.hpp
Tests/: CMakeLists.txt  LookupTest.cpp  PushBackStreamTest.cpp  TestTemplate.cpp  TokenizerTest.cpp  TokensTest.cpp  TypeRegistryTest.cpp  VariableTest.cpp
Tests/h/: TestHelpers.hpp
